--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,73 @@
 .App {
   text-align: center;
+  font-family: 'Karla', sans-serif;
 }
 
-
+nav{
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 30px 0 30px;
+  background-image: linear-gradient(90deg, #672280 1.18%,#A626D3 100%);
+  color: #FFFFFF;
+}
+.nav-group{
+  display: flex;
+  flex-direction: row;
+}
+.nav-icon{
+  width: 55px;
+  height: 50px;
+  padding: 10px;
+}
+.nav--title {
+  font-size: 30px;
+  margin-right: auto;
+}
+.nav--project{
+  margin-top: 25px;
+  font-size: 20px;
+    font-weight: 700;
+}
+section{
+  display: flex;
+  justify-content: center;
+}
+.form{
+  padding: 20px;
+  width: 600px;
+}
+.form-input-group{
+  display: flex;
+  justify-content: space-between;
+}
+input{
+  margin: 20px 0;
+  border: 1px solid #D5D4D8;
+  border-radius: 5px;
+  width: 100%;
+  height: 40px;
+  font-size: 17px;
+  padding: 5px 15px;
+}
+.margin-left{
+  margin-left: 6px;
+}
+.margin-right{
+  margin-right: 6px;
+}
+.form-btn{
+  margin: 10px 0;
+ width: 100%;
+height: 40px;
+background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+border-radius: 5px;
+border: none;
+color: #FFFFFF;
+font-weight: bold;
+font-size: 17px;
+cursor: pointer;
+}
+.meme-img{
+  padding-top: 10px;
+  width: 100%;
+}
