--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ nav{
   display: flex;
   justify-content: space-between;
   padding: 5px 30px 0 30px;
-  background-image: linear-gradient(90deg, #672280 1.18%,#A626D3 100%);
+  background-image: linear-gradient(90deg, #ee0979 1.18%,#ff6a00 100%);
   color: #FFFFFF;
 }
 .nav-group{
@@ -59,7 +59,7 @@ input{
   margin: 10px 0;
  width: 100%;
 height: 40px;
-background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+background: linear-gradient(90deg, #ee0979 1.18%,#ff6a00 100%);
 border-radius: 5px;
 border: none;
 color: #FFFFFF;
@@ -107,4 +107,18 @@ cursor: pointer;
 
 .top {
   top: 0;
+}
+
+.download-btn{
+  margin: 10px 0;
+ width: 100%;
+height: 40px;
+background: linear-gradient(90.41deg, #F2994A 1.14%, #F2C94C 100%);
+border-radius: 5px;
+border: none;
+color: #FFFFFF;
+font-weight: bold;
+font-size: 17px;
+cursor: pointer;
+
 }
